Adds configuration to read the file list